Update UI of memory-internals. Fix widths of few columns,  - column for pid  - column for memory usage in tables for processes and extensions to make them aligned.
BUG=252887
TEST=Manual

Review URL: https://chromiumcodereview.appspot.com/17577004

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@208161 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: f3ba426d20f077d9607bb36fcea71cda66eb934b

--- a/chrome/browser/resources/memory_internals/extension_view.css
+++ b/chrome/browser/resources/memory_internals/extension_view.css
@@ -3,19 +3,34 @@
  * found in the LICENSE file. */
 
 #extension-view {
+  border-spacing: 2px;
   width: 100%;
 }
 
-#extension-view tr:nth-child(odd) {
+#extension-view tr:nth-child(odd):not([class='header']) {
   background: rgb(239, 243, 255);
 }
 
 #extension-view td {
+  padding: 0.35em 0.5em 0;
   vertical-align: top;
 }
 
-#extension-view .extension-memory {
+#extension-view .header th {
+  border-bottom: 1px solid rgb(181, 198, 222);
+  padding: 0.35em 0.5em 0;
+  vertical-align: bottom;
+}
+
+#extension-view .extension-id {
   text-align: right;
+  width: 4em;
+}
+
+#extension-view .extension-memory {
+  border-left: 1px solid rgb(181, 198, 222);
+  text-align: right;
+  width: 7em;
 }
 
 #extension-view #extension-template {
