--- a/chrome/browser/resources/memory_internals/memory_internals.css
+++ b/chrome/browser/resources/memory_internals/memory_internals.css
@@ -3,7 +3,7 @@
  * found in the LICENSE file. */
 
 body {
-  font-size: 84%;
+  font-size: 70%;
   margin: 0;
   min-width: 45em;
   padding: 0.75em;
