--- a/chrome/browser/resources/memory_internals/snapshot_view.css
+++ b/chrome/browser/resources/memory_internals/snapshot_view.css
@@ -3,19 +3,34 @@
  * found in the LICENSE file. */
 
 #snapshot-view {
+  border-spacing: 2px;
   width: 100%;
 }
 
-#snapshot-view tr:nth-child(odd) {
+#snapshot-view tr:nth-child(odd):not([class='header']) {
   background: rgb(239, 243, 255);
 }
 
 #snapshot-view td {
+  padding: 0.35em 0.5em 0;
   vertical-align: top;
 }
 
-#snapshot-view .process-memory {
+#snapshot-view .header th {
+  border-bottom: 1px solid rgb(181, 198, 222);
+  padding: 0.35em 0.5em 0;
+  vertical-align: bottom;
+}
+
+#snapshot-view .process-id {
   text-align: right;
+  width: 4em;
+}
+
+#snapshot-view .process-memory {
+  border-left: 1px solid rgb(181, 198, 222);
+  text-align: right;
+  width: 7em;
 }
 
 #snapshot-view #process-template {
